<resources>
    <string name="app_name">usermodule</string>
    <string name="user_module_personal_info">个人资料</string>
    <string name="user_head_portrait">头像</string>
    <string name="user_nickname">昵称</string>
    <string name="user_real_name">实名认证</string>
    <string name="user_birthday">生日</string>
    <string name="user_gender">性别</string>
    <string name="user_address">地区</string>
    <string name="user_receive_address">收货地址</string>
    <string name="user_usual_person">常用联系人</string>
    <string name="user_login_password">登录密码</string>
    <string name="user_more">更多</string>
    <string name="user_bind_phone">绑定手机号</string>
    <string name="user_personal_sign">个性签名</string>
    <string name="user_logout">退出登录</string>
    <string name="user_man">男</string>
    <string name="user_woman">女</string>
    <string name="user_non_fix">未填写</string>
    <string name="user_login">登录</string>
    <string name="user_get_code">获取验证码</string>
    <string name="user_phone">手机号</string>
    <string name="user_label_code">验证码</string>
    <string name="user_str_no_account">没有账号，</string>
    <string name="user_str_have_account">已有账号，</string>
    <string name="user_str_go_login">去登录</string>
    <string name="user_str_go_register">去注册</string>
    <string name="user_str_register">注册</string>
    <string name="user_str_read_agree">已阅读并同意</string>
    <string name="user_str_register_agreement">《注册协议》、</string>
    <string name="user_str_post_agreement">《用户发布信息协议》</string>
    <string name="user_str_post_aapointment">《隐私声明》</string>
    <string name="user_str_code_send_success">验证码发送成功</string>
    <string name="user_str_conform">确定</string>
    <string name="user_update_nick">设置昵称</string>
    <string name="user_update_sign">设置个性签名</string>
    <string name="user_update_nick_empty">请输入修改内容</string>
    <string name="user_update_nick_limit">最少1个字，最多10个字</string>
    <string name="user_update_limit">最少1个字，最多50个字</string>
    <string name="user_update_address">设置家庭住址</string>
    <string name="user_more_f_address">家庭住址</string>
    <string name="user_update_star">设置星座</string>
    <string name="user_more_star">星座</string>
    <string name="user_update_school">设置学校名称</string>
    <string name="user_more_school">学校名称</string>
    <string name="user_update_company">设置公司名称</string>
    <string name="user_more_company">公司名称</string>
    <string name="user_update_email">设置邮箱</string>
    <string name="user_more_email">邮箱</string>
    <string name="user_not_authenticate">未实名</string>
    <string name="user_authenticated">已实名</string>
    <string name="user_pending_review">待审核</string>
    <string name="user_not_pass">申请未通过</string>
    <string name="user_with_draw">申请已撤</string>
    <string name="user_camera">相机</string>
    <string name="user_commit">提交</string>
    <string name="user_real_name_hint">部分活动需要实名认证后才能参与入场，申请成为志愿者也需要实名认证才能审核成功，请填写真实信息，审核通过后有利于提升你的信用分值</string>
    <string name="user_real_name_2">真实姓名</string>
    <string name="user_album">相册</string>
    <string name="user_msg_no_camera">相机不可用</string>
    <string name="user_contact_phone">联系电话</string>
    <string name="user_add_address">新增收货地址</string>
    <string name="user_address_notice">确保所填信息真实有效，以便您收货成功</string>
    <string name="user_add_receiver">收货人</string>
    <string name="user_address_phone">手机号码</string>
    <string name="user_address_detail">详细地址</string>
    <string name="user_please_select">请选择</string>
    <string name="user_hint_detail_address">街道门牌信息等</string>
    <string name="user_address_phone_hint">用于收货联系</string>
    <string name="user_set_default_address">设为默认收货地址</string>
    <string name="user_str_id_type">证件类型</string>
    <string name="user_str_id_card">证件号码</string>
    <string name="user_add_contact">新增联系人</string>
    <string name="user_contact_notice">确保所填信息真实有效，以便您正常出行</string>
    <string name="user_input_honesty">确保所填信息真实有效，以便您申请成功</string>
    <string name="user_input_real_name">请填写真实姓名</string>
    <string name="user_str_your_name">联系人姓名</string>
    <string name="user_str_hint_your_name">请输入联系人姓名</string>
    <string name="user_str_hint_cer_type">请选择证件类型</string>
    <string name="user_upload_id_card_photo">上传身份证照片</string>
    <string name="user_str_your_cert_number">请输入证件号码</string>
    <string name="user_str_your_cert_number_2">请填写证件号码</string>
    <string name="user_str_your_phone">请输入您的手机号码</string>
    <string name="user_delete">刪除</string>
    <string name="user_quite">退出</string>
    <string name="user_next_step">下一步</string>
    <string name="user_query">确认</string>
    <string name="user_quite_real_user">是否退出实名认证</string>
    <string name="user_quite_real_user_hint">退出后所填信息将不被保存</string>
    <string name="user_reviewing">审核中，撤回认证</string>
    <string name="user_modify_authenticate_data">修改认证资料</string>
    <string name="user_steps">安全认证,设置密码,完成</string>
    <string name="order_my_book">我的预约</string>
    <string name="order_book">预约</string>
    <string name="order_booking_number">订单编号:</string>
    <string name="order_time">时间：</string>
    <string name="order_people">数量：</string>
    <string name="order_address_name">场馆：</string>
    <string name="order_total_pay">总支付：</string>
    <string name="order_pay">支付：</string>
    <string name="order_cancel_order">取消订单</string>
    <string name="order_commend_order">评价订单</string>
    <string name="order_waite_valid">待审核</string>
    <string name="order_to_be_delivered">待发货</string>
    <string name="order_no_pass">未通过</string>
    <string name="order_waite_cost">待消费</string>
    <string name="order_waite_use">待使用</string>
    <string name="order_cost_imitation">立即消费</string>
    <string name="order_finish">已完成</string>
    <string name="order_no_effect">已失效</string>
    <string name="order_canceled">已取消</string>
    <string name="order_waite_pay">待支付</string>
    <string name="order_waite_close">已关闭</string>
    <string name="order_waite_payed">已支付</string>
    <string name="order_shipped">已发货</string>
    <string name="order_waite_book">待预约</string>
    <string name="order_shipped_number">已发货数</string>
    <string name="order_cost_number">已消费数</string>
    <string name="order_refused">已驳回</string>
    <string name="order_return">已退款</string>
    <string name="order_request_a_refund">申请退款</string>
    <string name="order_has_refund">已申退%1$s</string>
    <string name="order_total_str">共%1$s件商品 合计：</string>
    <string name="order_all">全部</string>
    <string name="order_comment">我要评论</string>
    <string name="order_free">免费</string>
    <string name="order_un_line">线下支付</string>
    <string name="order_yuan">￥</string>
    <string name="order_toatal_price">商品总价</string>
    <string name="order_integral">积分</string>
    <string name="order_freight">运费</string>
    <string name="order_detail">订单详情</string>
    <string name="order_real_pay">实付款</string>
    <string name="order_detail_2">详情</string>
    <string name="order_logistics">查看物流</string>
    <string name="order_appointment_cost">预约消费</string>
    <string name="order_reviews">点评晒单</string>
    <string name="order_comment_reservation">讲解预约</string>
    <string name="order_comment_mine">我要评论</string>
    <string name="order_order">预约</string>
    <string name="order_enter_time">入住时间</string>
    <string name="order_pay_2">支付</string>
    <string name="order_activity_information">活动信息</string>
    <string name="order_str_time">预订时间</string>
    <string name="order_str_people">使用人数</string>
    <string name="order_str_contact_phone">联系电话</string>
    <string name="order_contact_address">联系地址</string>
    <string name="order_belong_venue">所属场馆</string>
    <string name="order_can_cancel_time">申请成功后支持（%1$s）前可退</string>
    <string name="order_can_cancel_any">申请成功后支持随时可退</string>
    <string name="order_can_cancel_not">不可取消</string>
    <string name="order_can_cancel_24h">申请成功后24小时内支持取消</string>
    <string name="order_can_use_cancel_24h">支持%1$s前可退</string>
    <string name="order_cancel_apply">取消申请</string>
    <string name="order_label_notice">诚信分大于%1$s分申请后可免审核</string>
    <string name="order_label_cxyx_notice">诚信分大于%1$s分申请后可享受诚信优享</string>
    <string name="order_number">数量：</string>
    <string name="order_copy">复制</string>
    <string name="order_copy_complete">复制完成</string>
    <string name="order_booking_time">下单时间</string>
    <string name="order_remark">备注信息</string>
    <string name="order_contact">联系人</string>
    <string name="order_contact_phone">联系电话</string>
    <string name="order_contact_idcard">证件号</string>
    <string name="order_str_valid">审核信息</string>
    <string name="order_valid_time">审核时间</string>
    <string name="order_back_money">退还金额</string>
    <string name="order_valid_remark">审核备注</string>
    <string name="order_code">订单编号</string>
    <string name="order_qr_code">二维码和电子码</string>
    <string name="order_numbers">%1$s张票</string>
    <string name="order_long_press">长按保存二维码</string>
    <string name="order_elect_code">电子码：</string>
    <string name="order_elect_code_str">电子码：%1$s</string>
    <string name="order_string_has_clip">已保存到剪切板</string>
    <string name="order_string_cancel">取消信息</string>
    <string name="order_cancel_time">取消时间</string>
    <string name="order_cancel_back_money">退还支付</string>
    <string name="order_cancel_number">取消数量</string>
    <string name="order_cancel">取消</string>
    <string name="order_cancel_notice">取消后需重新预约,确定取消该订单？</string>
    <string name="order_cancel_notice_label">取消订单</string>
    <string name="order_sale_information">核销信息</string>
    <string name="order_sale_number">核销数量</string>
    <string name="order_sale_time">核销时间</string>
    <string name="order_sale_person">核销人</string>
    <string name="order_consume_effect_time">有效期：</string>
    <string name="order_goods_standard">商品规格：</string>
    <string name="order_standard">规格：</string>
    <string name="order_goods_number">购买数量：</string>
    <string name="order_goods_number_2">购买数量</string>
    <string name="order_goods_reapply_notice">有新的预约被驳回，点击重新预约！</string>
    <string name="order_goods_valid_notice">有新的预约正在等待商家确认！</string>
    <string name="order_need_label">需要续约后才能使用</string>
    <string name="order_imitate">立即预约</string>
    <string name="order_use_imitation">立即使用</string>
    <string name="order_has_use">已消费</string>
    <string name="order_has_no_effect">已过期</string>
    <string name="order_my_consume">我的消费码</string>
    <string name="order_venue">活动室：</string>
    <string name="order_activity_room_time">预约时间：</string>
    <string name="order_activity_room_time_stamp">%1$s 至 %2$s</string>
    <string name="order_activity_room_time_stamp_">%1$s-%2$s</string>
    <string name="order_activity_room_time_stamp_dm">%1$s-%2$s %3$s-%4$s</string>
    <string name="order_activity_room_number_stamp">x %1$s</string>
    <string name="order_activity_time">活动时间：</string>
    <string name="order_activity_address">活动地点：</string>
    <string name="order_activity_belong">所属场馆：</string>
    <string name="order_hotel_time_number">入离时间:%1$s~%2$s，共%3$s晚</string>
    <string name="order_hotel_number">共%1$s晚，%2$s间</string>
    <string name="order_consume_detail">消费码详情</string>
    <string name="order_consume_use_time">消费时间：</string>
    <string name="order_consume_waite_confirm">待确认</string>
    <string name="order_consume_booking">预约消费</string>
    <string name="order_consume_guide">导航</string>
    <string name="order_consume_take_phone">电话</string>
    <string name="order_consume_tourist_info">游客信息</string>
    <string name="order_consume_time">预约使用时间</string>
    <string name="order_consume_name">姓名</string>
    <string name="order_consume_hint_name">请输入姓名</string>
    <string name="order_consume_number_apply">申请数量</string>
    <string name="order_consume_add_price_notice">%1$s,当天预约数量为%2$s，需支付加价金额</string>
    <string name="order_consume_confirm_booking">确认预订</string>
    <string name="order_consume_check">支付</string>
    <string name="order_pay_right_now">立即支付</string>
    <string name="order_consume_waite_cost">近期待消费：%1$s</string>
</resources>