<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


        <variable
            name="item"
            type="com.daqsoft.provider.bean.Record" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_20"
        android:paddingTop="@dimen/dp_10"
        android:paddingRight="@dimen/dp_20">

        <com.daqsoft.provider.view.ItemView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:contentGravity="left"
            app:labelPadding="@dimen/dp_0"
            app:labelSize="@dimen/sp_12"
            app:labelWidth="@dimen/dp_20"
            app:leftLabel="@string/order_sale_number"
            app:leftLabelColor="@color/txt_gray"
            app:rightContent='@{item.num}'
            app:rightContentColor="@color/txt_gray"
            app:rightContentSize="@dimen/sp_12"
            app:showArrow="false"
            app:showDivider="false" />

        <com.daqsoft.provider.view.ItemView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_20"
            app:contentGravity="left"
            app:labelPadding="@dimen/dp_0"
            app:labelSize="@dimen/sp_12"
            app:labelWidth="@dimen/dp_20"
            app:leftLabel="@string/order_sale_time"
            app:leftLabelColor="@color/txt_gray"
            app:rightContent='@{item.createTime}'
            app:rightContentColor="@color/txt_gray"
            app:rightContentSize="@dimen/sp_12"
            app:showArrow="false"
            app:showDivider="false" />

        <com.daqsoft.provider.view.ItemView
            android:id="@+id/tv_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            app:contentGravity="left"
            app:labelPadding="@dimen/dp_0"
            app:labelSize="@dimen/sp_12"
            app:labelWidth="@dimen/dp_20"
            app:leftLabel="@string/order_sale_person"
            app:leftLabelColor="@color/txt_gray"
            app:rightContent='@{item.operateUser}'
            app:rightContentColor="@color/txt_gray"
            app:rightContentSize="@dimen/sp_12"
            app:showArrow="false"
            app:showDivider="false" />
    </LinearLayout>

</layout>